first itteration of news

--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -22,8 +22,9 @@
 					<a href="https://www.khanacademy.org/computing/computer-programming/programming" target="_blank">Khan Academy</a>
 				</li>
 				<li>
-					<a href="#">Point 3</a>
+					<a href="https://projecteuler.net/" target="_blank">Project Euler</a>
 				</li>
+
 			</ul>
 			<br>
 			<br>
@@ -112,6 +113,22 @@
 				<li>
 					<a href="https://www.theguardian.com/lifeandstyle/wordofmouth/2011/jan/13/how-make-perfect-chicken-soup
 " target="_blank">Chicken Soup</a>
+				</li>
+				<li>
+					<a href="http://www.howsweeteats.com/2015/05/easy-thin-crust-pizza/
+" target="_blank">No Rise Pizza Crust</a>
+				</li>
+				<li>
+					<a href="		
+" target="_blank">18hr Rise Pizza Crust</a>
+				</li>
+				<li>
+					<a href="http://www.copymethat.com/r/dO52j1K/chef-johns-crispy-honey-sriracha-chicken/
+" target="_blank">Chef John's Crispy Honey Sriracha Chicken Wings
+</a>
+				</li>
+				<li>
+					<a href="http://emmettmoore.pythonanywhere.com/blog/post/11/" target="_blank">How to cook rice</a>
 				</li>
 			</ul>
 			<br>
