--- a/home/templates/home/maths.html
+++ b/home/templates/home/maths.html
@@ -13,6 +13,140 @@
 {% block content %}
 	<div id="bar">
         </div>
+
+
+	<div class="row">
+		<div class="col-sm-6 col-sm-offset-3">
+			<h1 class="title text-center">
+		    Physics
+		    </h1>
+		</div>
+		<div class="col-sm-6 text-center">
+			<h2>
+			General Constants
+			</h2>
+			<br>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Speed of light
+				</li>
+				<li class="col-sm-6 text-center">$c = 2.99 \times 10^8 ms^{-1}$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Permeability of Vacuum
+				</li>
+				<li class="col-sm-6 text-center">$\mu_0 = 4 \pi \times 10^{-7} VsA^{-1}m^{-1}$</li>
+			</ul>
+			<br>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Permittivity of vacuum
+				</li>
+				<li class="col-sm-6 text-center">$\epsilon_0 = 8.854 \times 10^{-12} AsV^{-1}m^{-1}$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Gravitational constant
+				</li>
+				<li class="col-sm-6 text-center">$G = 6.67 \times 10^{-11} N m^2 kg^{-2}$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Planck Constant
+				</li>
+				<li class="col-sm-6 text-center">$h = 6.62 \times 10^{-34} J s$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Electron Charge
+				</li>
+				<li class="col-sm-6 text-center">$e = 1.6 \times 10^{-19} C$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Proton Rest Mass
+				</li>
+				<li class="col-sm-6 text-center">$m_p = 1.67 \times 10^{-27} kg$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Planck Constant
+				</li>
+				<li class="col-sm-6 text-center">$h = 6.62 \times 10^{-34} J s$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Boltzmann Constant
+				</li>
+				<li class="col-sm-6 text-center">$k_B = 1.38 \times 10^{-23} J K^{-1}$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Avogadro number
+				</li>
+				<li class="col-sm-6 text-center">$N_A = 6.02 \times 10^{23} mol^{-1}$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Bohr Radius
+				</li>
+				<li class="col-sm-6 text-center">$a_0 = 0.53 \times 10^{-10} m$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Year
+				</li>
+				<li class="col-sm-6 text-center">$yr = \pi \times 10^7 s$</li>
+			</ul>
+			<br>
+			<br>
+		</div>
+		<div class="col-sm-6 text-center">
+			<h2>
+			Astro
+			</h2>
+			<br>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Solar Mass
+				</li>
+				<li class="col-sm-6 text-center">$M_o = 1.989 \times 10^{30} kg$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Solar Radius
+				</li>
+				<li class="col-sm-6 text-center">$R_o = 6.96 \times 10^{8} m$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Astronomical Unit
+				</li>
+				<li class="col-sm-6 text-center">$AU = 1.5 \times 10^{11} m$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Solar Luminosity
+				</li>
+				<li class="col-sm-6 text-center">$L_o = 3.83 \times 10^{26} J s^{-1}$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Parsec
+				</li>
+				<li class="col-sm-6 text-center">$pc = 3.086 \times 10^{16} m$</li>
+			</ul>
+			<ul>
+				<li class="col-sm-6 text-center">
+				Light year
+				</li>
+				<li class="col-sm-6 text-center">$ly = 9.46 \times 10^{15} m$</li>
+			</ul>
+			<br>
+			<br>
+		</div>
+	</div>
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3">
 			<h1 class="title text-center">
@@ -95,14 +229,26 @@
 		</div>
 		<div class="col-sm-4 text-center">
 			<h2>
-			Taylor Expansion
+			Calculus
 			</h2>
 			<br>
 			<ul>
-				<li></li>
+				<li>Product Rule
+				$$\frac{d}{dx}(fg) = \frac{df}{dx} g + f \frac{dg}{dx}$$</li>
+				<li>Quotient Rule
+				$$\frac{d}{dx}\frac{f}{g} = \frac{f'g - g'f}{g^2}$$<li>
+				<li>Chain Rule
+				$$\frac{df}{dx} = \frac{dg}{dx}\cdot\frac{df}{dg}$$</li>
+				<li>Integration by parts
+				$$\int f g' dx = fg - \int g f' dx$$</li>
+				<li>Integration by Subsitution
+				$$\int f(x) dx = \int f(x(g))x'(g)dg$$</li>
 			</ul>
+
 			<br>
 			<br>
 		</div>
 	</div>
+
+
 {% endblock %}
