--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,16 +4,13 @@
 	<div class="row">
 		<div class="col-sm-7 col-sm-offset-3">
 			<h1 class="title text-center">
-		    Emmetts Home Page
+		    Home Page
 		    </h1>
 		    <p>
 		    Welcome to my website. I am a student at the University of Liverpool, studying for a masters in Astrophysics.
 		    </p>
 		    <p>
-		    This is just a place for me to mess around with code and keep myself organised. The blog will be used as a place to keep information, be it for clarifying my understanding on topics from lectures, or simple walkthroughs for coding that I may want to revisit later. The links section has all the resources I use often.
-		    </p>
-		    <p>
-		    I may make apps from time to time. The first is the music grapher app, which barely works and I'm still updating.
+		   	I have created this webpage as a place to develop any ideas I have. My blog is mainly for project euler solutions, but I also post some recipes. The music grapher section is a project I'm working on to plot the acclaim of a band or artist over their career, as judged by the album score accumulator AOTY. The links section is just for useful links for when I'm away from my computer. The maths section has all the identities and constants in one place for easy research. The News section is an app I'm working on to accumulate headlines from an array of different sources so you can see and read things from different perspectives. It's useful for remaining critical and unbias of divisive issues, and seeing how different media react to events. I'm working on making it more user friendly.
 		    </p>
 		</div>
 	</div>
