--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -37,7 +37,7 @@
                     <li class="col-lg-2 full-width text-center"><a href="/music_grapher/">Music Grapher</a></li>
                     <li class="col-lg-2 text-center"><a href="/home/links/">Links</a></li>
                     <li class="col-lg-2 text-center"><a href="/home/maths/">Maths</a></li>
-                    <li class="col-lg-2 text-center"><a href="/">About</a></li>
+                    <li class="col-lg-2 text-center"><a href="/home/about/">About</a></li>
                 </ul>
             </div>
         </header>
