--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -24,6 +24,24 @@
 				<li>
 					<a href="https://projecteuler.net/" target="_blank">Project Euler</a>
 				</li>
+				<li>
+					<a href="http://pythonbooks.org" target="_blank">Books for Python</a>
+				</li>
+				<li>
+					<a href="https://github.com/SCassidy-UK/HiPyProject" target="_blank">HiPy</a>
+				</li>
+
+				<li>
+					<a href="http://scikit-learn.org/stable/" target="_blank">Machine learning with scikit</a>
+				</li>
+
+				<li>
+					<a href="http://kanoki.org/2017/07/16/pandas-in-a-nutshell/" target="_blank">Introduction to Pandas</a>
+				</li>
+
+				<li>
+					<a href="https://sourcedexter.com/amazing-tensorflow-github-projects/" target="_blank">Tensorflow Projects</a>
+				</li>
 
 			</ul>
 			<br>
