--- a/music_grapher/templates/music_grapher/index.html
+++ b/music_grapher/templates/music_grapher/index.html
@@ -5,6 +5,10 @@
 	    <h1 class="title text-center">
 	    Music Grapher
 	    </h1>
+	    <h2 align="center">
+	    {{ Error }}
+	    </h2>
+	    <br>
 	    <form method="POST" class="post-form" align="center">{% csrf_token %}
 	        {{ Bform.as_p }}
 	        <button type="submit" class="save btn btn-default">Submit</button>
