Cleaned up base and about

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -7,9 +7,13 @@
 		    About
 		    </h1>
 		    <p>
-		    Please feel free to contact me via email.
+		    Please feel free to contact me.
+		    <br>
 		    Email: emmettjd@hotmail.co.uk
-		    Github: https://github.com/emmetttt
+		    <br>
+		    Github: <a href="https://github.com/emmetttt" target="_blank">https://github.com/emmetttt</a>
+		    <br>
+		    LinkedIn: <a href="https://www.linkedin.com/in/emmett-moore-751057129/" target="_blank">https://www.linkedin.com/in/emmett-moore-751057129/</a>
 		    </p>
 		</div>
 	</div>
