--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,8 +9,9 @@
 		    <p>
 		    Welcome to my website. I am a student at the University of Liverpool, studying for a masters in Astrophysics.
 		    </p>
+		    <br>
 		    <p>
-		   	I have created this webpage as a place to develop any ideas I have. My blog is mainly for project euler solutions, but I also post some recipes. The music grapher section is a project I'm working on to plot the acclaim of a band or artist over their career, as judged by the album score accumulator AOTY. The links section is just for useful links for when I'm away from my computer. The maths section has all the identities and constants in one place for easy research. The News section is an app I'm working on to accumulate headlines from an array of different sources so you can see and read things from different perspectives. It's useful for remaining critical and unbias of divisive issues, and seeing how different media react to events. I'm working on making it more user friendly.
+		   	I have created this webpage as a place to develop any ideas I have. Check out my blogs for explanations of projects I am working on. The music grapher section is a project I made to plot the acclaim of a band or artist over their career by looking at how well each album was received. The links section is just for useful links for when I'm away from my computer.
 		    </p>
 		</div>
 	</div>
