--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -24,20 +24,21 @@
                     <li><a href="https://github.com/emmetttt" target="_blank">
                         <img src="https://github.com/favicon.ico" alt="github">
                     </a></li>
-                    <li><a href="https://www.facebook.com/emmett.moore.923" target="_blank">
-                        <img src="{% static 'css/img/fb.png' %}" alt="fb">
+                    <li><a href="https://www.linkedin.com/in/emmett-moore-751057129/" target="_blank">
+                        <img src="{% static 'css/img/li.png' %}" alt="fb">
                     </a></li>
                 </ul>
                 <h1 id="logo">
                     <a href="/">Emmett Moore</a>
                 </h1>
                 <ul id="nav">
+                    <li class="col-lg-1 text-center"><a></a></li>
                     <li class="col-lg-2 text-center"><a href="/">Home</a></li>
                     <li class="col-lg-2 text-center"><a href="/blog/">Blog</a></li>
                     <li class="col-lg-2 full-width text-center"><a href="/music_grapher/">Music Grapher</a></li>
                     <li class="col-lg-2 text-center"><a href="/home/links/">Links</a></li>
-                    <li class="col-lg-2 text-center"><a href="/home/maths/">Maths</a></li>
                     <li class="col-lg-2 text-center"><a href="/home/about/">About</a></li>
+                    <li class="col-lg-1 text-center"><a></a></li>
                 </ul>
             </div>
         </header>
