--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -34,7 +34,7 @@
                 <h2 class="date"> {{ post.published_date }} </h2>
             </div>
             <div class="col-md-7">
-                {% autoescape off %} {{ post.text|linebreaksbr }} {% endautoescape %}
+                {% autoescape off %} {{ post.description|linebreaksbr }} {% endautoescape %}
             </div>
         </article>
 
