Big update to the blog, WYSIWYG editor and image uploader

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -33,7 +33,7 @@
 
                 <h2 class="date"> {{ post.published_date }} </h2>
             </div>
-            <div class="col-md-7">
+            <div class="description col-md-7">
                 {% autoescape off %} {{ post.description|linebreaksbr }} {% endautoescape %}
             </div>
         </article>
