--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
 		    Home Page
 		    </h1>
 		    <p>
-		    Welcome to my website. I am a student at the University of Liverpool, studying for a masters in Astrophysics.
+		    Welcome to my website. I am an Astrophysics graduate from the University of Liverpool.
 		    </p>
 		    <br>
 		    <p>
