--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -71,6 +71,9 @@
 				<li>
 					<a href="https://ccbv.co.uk/" target="_blank">Django Views Explained</a>
 				</li>
+				<li>
+					<a href="https://sqlzoo.net/" target="_blank">SQL Practice</a>
+				</li>
 			</ul>
 			<br>
 			<br>
