--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -20,7 +20,7 @@
 
     {% for post in posts %}
         <article class="post row">
-            <div class="col-md-3 blog_post_info">
+            <div class="blog_post_info">
                 <h1 class="blog_post_title">
                     <a href="{% url 'post_specific' pk=post.pk %}">
                         {{ post.title }}
@@ -29,11 +29,15 @@
 
                 <a href="{% url 'post_specific' pk=post.pk %}" class="read_more text-uppercase">Read More</a>
 
-                <a href="{% url 'post_list_tag' kwarg=post.tag %}" class="date" > Tags: {{ post.tag }} </a>
+                <h2 class="date" >
+                    <a href="{% url 'post_list_tag' kwarg=post.tag %}">
+                        Tags: {{ post.tag }}
+                    </a>
+                </h2>
 
                 <h2 class="date"> {{ post.published_date }} </h2>
             </div>
-            <div class="description col-md-7">
+            <div class="description">
                 {% autoescape off %} {{ post.description|linebreaksbr }} {% endautoescape %}
             </div>
         </article>
