--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -2,19 +2,41 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col-sm-7 col-sm-offset-3">
-			<h1 class="title text-center">
+		<div class="col-sm-7 col-sm-offset-3 text-center">
+			<h1 class="title">
 		    About
 		    </h1>
 		    <p>
-		    Please feel free to contact me.
-		    <br>
-		    Email: emmettjd@hotmail.co.uk
-		    <br>
-		    Github: <a href="https://github.com/emmetttt" target="_blank">https://github.com/emmetttt</a>
-		    <br>
-		    LinkedIn: <a href="https://www.linkedin.com/in/emmett-moore-751057129/" target="_blank">https://www.linkedin.com/in/emmett-moore-751057129/</a>
+		    	Please feel free to contact me.
 		    </p>
+		    <table align="center">
+		    	<tr>
+		    		<td>
+		    			Email:
+		    		</td>
+		    		<td style="padding-left: 10px;">
+		    			emmettjd@hotmail.co.uk
+		    		</td>
+		    	</tr>
+		    	<br>
+			    <tr>
+			    	<td>
+			    		Github:
+			    	</td>
+			    	<td style="padding-left: 10px;">
+			    		<a href="https://github.com/emmetttt" target="_blank">github.com/emmetttt</a>
+			    	</td>
+			    </tr>
+			    <br>
+			    <tr>
+			    	<td>
+			    		LinkedIn:
+			    	</td>
+			    	<td style="padding-left: 10px;">
+			    		<a href="https://www.linkedin.com/in/emmett-moore-751057129/" target="_blank">linkedin.com/in/emmett-moore/</a>
+			    	</td>
+			    </tr>
+		    </table>
 		</div>
 	</div>
 {% endblock %}
