--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -32,13 +32,10 @@
                     <a href="/">Emmett Moore</a>
                 </h1>
                 <ul id="nav">
-                    <li class="col-sm-1 text-center"><a></a></li>
-                    <li class="col-sm-2 text-center"><a href="/">Home</a></li>
-                    <li class="col-sm-2 text-center"><a href="/blog/">Blog</a></li>
-                    <li class="col-sm-2 full-width text-center"><a href="/music_grapher/">Music Grapher</a></li>
-                    <li class="col-sm-2 text-center"><a href="/home/links/">Links</a></li>  
-                    <li class="col-sm-2 text-center"><a href="/home/about/">About</a></li>
-                    <li class="col-sm-1 text-center"><a></a></li>
+                    <li class="col-sm-3 text-center"><a href="/">Home</a></li>
+                    <li class="col-sm-3 text-center"><a href="/blog/">Blog</a></li>
+                    <li class="col-sm-3 text-center"><a href="http://www.graphthatband.com" target="_blank">GraphThatBand</a></li>
+                    <li class="col-sm-3 text-center"><a href="/home/about/">About</a></li>
                 </ul>
             </div>
         </header>
