--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,11 +7,18 @@
 		    Home Page
 		    </h1>
 		    <p>
-		    Welcome to my website. I am an Astrophysics graduate from the University of Liverpool.
+		    Welcome to my website! I am a software engineer and Astrophysics graduate interested in Big Data, ML and web development.
 		    </p>
 		    <br>
 		    <p>
-		   	I have created this webpage as a place to develop any ideas I have. Check out my blogs for explanations of projects I am working on. The music grapher section is a project I made to plot the acclaim of a band or artist over their career by looking at how well each album was received. The links section is just for useful links for when I'm away from my computer.
+		    I created this website as a place to host projects I have been working on.
+		    </p>
+		    <p>
+		    I also have a <a href="/blog/">blog</a> where I write about these projects, or attempt to explain CS concepts that I am learning about.
+		    </p>
+		    <br>
+		    <p>
+		    Feel free to contact me, you can find my contact information <a href="/about/">here</a>.
 		    </p>
 		</div>
 	</div>
